--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,26 +1,17 @@
 .about-page {
     display: flex;
     justify-content: center;
+    height: 100%;
     gap: 65px;
+    margin-bottom: 50px;
 }
-
-/*.about {
-    
-}*/
 
 .about p {
     max-width: 500px;
     font-size: 17px;
     line-height: 1.5;
+    text-align: left;
 }
-
-/*.skills {
-    margin-right: 30px;
-}
-
-.skills h3 {
-
-}*/
 
 .skill-list {
     display: grid;
@@ -30,8 +21,8 @@
 }
 
 .skill-list span {
-    background-color: rgb(241, 88, 88);
     text-align: center;
     align-content: center;
-    border-radius: 3px;
+    background-color: #DF2935;
+    box-shadow: 1px 1px 1px 1px black;
 }
