--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,7 +4,7 @@
     align-items: center;
     flex-direction: column;
     gap: 10px;
-    flex: 1;
+    /*flex: 1;*/
 }
 
 .input-box {
@@ -29,11 +29,9 @@
 }
 
 .button {
+    border: 1px solid black;
     width: 150px;
     height: 30px;
-    background-color: rgb(71, 71, 192);
-    border: none;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
     cursor: pointer;
-    color: white;
+    color: black;
 }
