--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,10 +1,11 @@
 .intro {
     display: flex;
-    /*align-items: center;*/
+    height: 100%;
     justify-content: center;
     align-content: center;
     gap: 5rem;
     margin-top: 50px;
+    margin-bottom: 135px;
 }
 
 .my_picture {
