--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -6,8 +6,8 @@
     flex-wrap: wrap;
     align-items: center;
     gap: 40rem;
-    padding: 0 1rem;
-    height: 100px;
+    /*padding: 0 1rem;*/
+    height: 90px;
 }
 
 .logo {
@@ -29,11 +29,17 @@
     height: 100%;
     display: flex;
     align-items: center;
-    padding: .25rem;
+    /*padding: 15px 20px;*/
 }
 
 .navbar li a:hover {
-    text-decoration: overline;
-    color: rgb(89, 89, 207);
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 1.2px;
 }
 
+.active {
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-thickness: 1.2px;
+}
