--- a/src/components/project-list/projectlist.css
+++ b/src/components/project-list/projectlist.css
@@ -1,49 +1,80 @@
-.container {
-    display: flex;
-    /*align-items: center;*/
-    justify-content: center;
-    gap: 2.5rem;
+.grid-container {
+    display: grid;
+    grid-template-columns: 700px 500px;
+    grid-template-rows: 400px;
+    column-gap: 40px;
+    row-gap: 80px;
+    /*border: 2px solid black;*/
 }
 
 .img-card {
-    width: 750px;
-    height: 500px;
+    /*border: 2px solid black;*/
+    margin: auto;
+    width: 600px;
+    height: 400px;
+    box-shadow: 5px 5px 5px 5px grey;
 }
 
 .img-card .proj-img {
     max-width: 100%;
     max-height: 100%;
+    object-fit: contain;
 }
 
 .props {
+    /*border: 2px solid black;*/
+    width: 400px;
     display: flex;
     flex-direction: column;
-    max-width: 500px;
+    align-items: flex-start;
+}
+
+.description {
+    text-align: left;
+    overflow: hidden;
 }
 
 .stacks {
-    display: flex;
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
 }
 
 .stack {
-    background-color: rgb(189, 184, 184);
-    border-radius: 3px;
-    width: 90px;
+    background-color: #DF2935;
+    height: 25px;
     margin-right: 10px;
     margin-bottom: 10px;
+    color: white;
+    align-self: center;
 }
 
 .git-link {
-    display: flex;
-    border: thin black 2px;
+    border: solid black 1.5px;
+    background-color: white;
+    width: 90px;
+    height: 25px;
+    margin-top: 15px;
 }
 
 .link {
     text-decoration: none;
-    background-color: rgb(126, 126, 212);
     border-radius: 3px;
-    width: 90px;
     color: black;
+    vertical-align: middle;
+}
+
+.view-link {
+    height: 25px;
+    background-color: black;
+    color: white;
+    width: 90px;
+    margin-top: 15px;
+}
+
+.v-link {
+    text-decoration: none;
+    color: white;
+    vertical-align: middle;
 }
 
 
