--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,6 +1,8 @@
 .main-container {
-    display: flex;
-    flex-direction: column;
-    gap: 2.5rem;
-    
+    width: 100%;
+    height: 100%;
+    display: grid;
+    gap: 25px;
+    place-items: center;
+    margin-bottom: 50px;
 }
