--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -6,6 +6,10 @@
     margin-bottom: 50px;
 }
 
+.about-page h2 {
+    margin-bottom: 30px;
+}
+
 .about p {
     max-width: 500px;
     font-size: 17px;
@@ -23,6 +27,9 @@
 .skill-list span {
     text-align: center;
     align-content: center;
-    background-color: #DF2935;
-    box-shadow: 1px 1px 1px 1px black;
+    border: 1px solid rgb(156, 151, 151);
+    font-weight: 100px;
+    background-color: #6b6767;
+    color: rgb(235, 232, 232);
+    box-shadow: 0 3px 3px 3px;
 }
