--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -4,7 +4,6 @@
     align-items: center;
     flex-direction: column;
     gap: 10px;
-    /*flex: 1;*/
 }
 
 .input-box {
@@ -30,8 +29,9 @@
 
 .button {
     border: 1px solid black;
+    background-color: black;
     width: 150px;
     height: 30px;
     cursor: pointer;
-    color: black;
+    color: white;
 }
