--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,15 +1,15 @@
 .intro {
     display: flex;
-    height: 100%;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     gap: 5rem;
     margin-top: 50px;
-    margin-bottom: 135px;
+    margin-bottom: 110px;
 }
 
-.my_picture {
-    width: 300px;
+
+.intro .my_picture {
+    max-width: 350px;
     align-items: stretch;
 }
 
