--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -1,45 +1,45 @@
-
 .navbar {
     color: black;
     display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
-    gap: 40rem;
-    /*padding: 0 1rem;*/
-    height: 90px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
-.logo {
+.navbar .logo {
     font-size: 20px;
     font-weight: bold;
+    cursor: pointer;
 }
 
-.navbar ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.navbar .nav-list {
     display: flex;
-    gap: 1rem;
 }
+
+.nav-list li {
+    list-style: none;
+    margin: 0, 0.5rem;
+}
+
+.navbar ul li a {
+    padding: 0.7rem 1rem;
+    display: block;
+    border-radius: 10px;
+}
+
 
 .navbar a {
     color: black;
     text-decoration: none;
-    height: 100%;
     display: flex;
     align-items: center;
-    /*padding: 15px 20px;*/
 }
 
-.navbar li a:hover {
+
+.navbar li a:hover, a.active {
     text-decoration: underline;
     text-underline-offset: 8px;
     text-decoration-thickness: 1.2px;
 }
 
-.active {
-    text-decoration: underline;
-    text-underline-offset: 8px;
-    text-decoration-thickness: 1.2px;
-}
