--- a/src/components/project-list/projectlist.css
+++ b/src/components/project-list/projectlist.css
@@ -4,11 +4,9 @@
     grid-template-rows: 400px;
     column-gap: 40px;
     row-gap: 80px;
-    /*border: 2px solid black;*/
 }
 
 .img-card {
-    /*border: 2px solid black;*/
     margin: auto;
     width: 600px;
     height: 400px;
@@ -22,7 +20,6 @@
 }
 
 .props {
-    /*border: 2px solid black;*/
     width: 400px;
     display: flex;
     flex-direction: column;
@@ -40,7 +37,8 @@
 }
 
 .stack {
-    background-color: #DF2935;
+    background-color: #40434E;
+    font-weight: 70px;
     height: 25px;
     margin-right: 10px;
     margin-bottom: 10px;
@@ -50,7 +48,7 @@
 
 .git-link {
     border: solid black 1.5px;
-    background-color: white;
+    background-color: black;
     width: 90px;
     height: 25px;
     margin-top: 15px;
@@ -59,22 +57,9 @@
 .link {
     text-decoration: none;
     border-radius: 3px;
-    color: black;
-    vertical-align: middle;
-}
-
-.view-link {
-    height: 25px;
-    background-color: black;
-    color: white;
-    width: 90px;
-    margin-top: 15px;
-}
-
-.v-link {
-    text-decoration: none;
     color: white;
     vertical-align: middle;
 }
+
 
 
